security-GitOps-portfolio/clusters/cks-lab/manifests/01-secure-app-deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cks-secure-app
  labels:
    owner: "team-name"
    security-lab: "true"
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
